--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header h1 {
 table {
   width: 100%;
   border-collapse: collapse;
-  box-shadow: 0 1rem 2rem -1rem rgba(0,0,0,0.3);
+  box-shadow: 0 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
 }
 table * {
   font-size: 1.4rem;
@@ -134,5 +134,12 @@ td .remove {
   color: red;
 }
 td .remove:hover {
+  cursor: pointer;
+}
+table tfoot tr td button {
+  color: var(--primary-color);
+  padding: 2px;
+  background-color: #303030;
+  border-radius: 8px;
   cursor: pointer;
 }
